<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app=":http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:screenOrientation="portrait" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#4B610B" >

        <!-- Login form -->

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:padding="30dip" >

            <TextView
                android:id="@+id/lEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_l_email"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:singleLine="true" />

            <TextView
                android:id="@+id/lPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_l_password"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:inputType="textPassword"
                android:singleLine="true" />

            <Button
                android:id="@+id/bLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dip"
                android:onClick="signIn"
                android:text="@string/login_l_signin" />

            <TextView
                android:id="@+id/noRegistrado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:onClick="noRegistrado"
                android:text="@string/noRegistrado" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout1"
            android:layout_alignParentLeft="true"
            android:gravity="center" >

            <ImageView
                android:id="@+id/virtualimage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:src="@drawable/ic_launcher" />
        </RelativeLayout>

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/head"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="45sp"
            android:textStyle="bold" />
    </RelativeLayout>

</ScrollView>