<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="#4B610B"
    android:orientation="vertical"
    android:paddingTop="40dip"
    android:screenOrientation="portrait"
    tools:context=".VirtualtradeMainActivity" >

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dip" >

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/anuncios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingTop="60dip" >

        <ImageButton
            android:id="@+id/anunciosbutton"
            android:layout_width="250dp"
            android:layout_height="84dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dip"
            android:background="@drawable/button"
            android:gravity="right|center"
            android:onClick="verAnuncios"
            android:paddingTop="5dp"
            android:scaleType="fitStart"
            android:src="@drawable/anuncio" />

        <TextView
            android:id="@+id/textanuncios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/anunciosbutton"
            android:layout_alignTop="@+id/anunciosbutton"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/ver_anuncios"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingTop="10dip" >

        <ImageButton
            android:id="@+id/perfilbutton"
            android:layout_width="250dp"
            android:layout_height="84dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dip"
            android:background="@drawable/button"
            android:gravity="right|center"
            android:onClick="verPerfil"
            android:paddingTop="20dp"
            android:scaleType="fitStart"
            android:src="@drawable/user" />

        <TextView
            android:id="@+id/textuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/perfilbutton"
            android:layout_alignTop="@+id/perfilbutton"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="38dp"
            android:layout_marginTop="28dp"
            android:text="@string/ver_perfil"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mensajes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingTop="10dip" >

        <ImageButton
            android:id="@+id/mensajesbutton"
            android:layout_width="250dp"
            android:layout_height="84dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dip"
            android:background="@drawable/button"
            android:gravity="right|center"
            android:onClick="verMensajes"
            android:paddingTop="10dp"
            android:scaleType="fitStart"
            android:src="@drawable/mensajes" />

        <TextView
            android:id="@+id/textmensajes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/mensajesbutton"
            android:layout_alignTop="@+id/mensajesbutton"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/ver_mensajes"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cerrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/cerrarSesion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dip"
            android:layout_marginTop="40dip"
            android:clickable="true"
            android:gravity="center"
            android:onClick="cerrarSesion"
            android:text="@string/cerrarSesion"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

</LinearLayout>